New command subsystem, more initialization improvements, locale fixes